Moved matchRequest method to matching Service. Combined with an existed